art section added

--- a/responsive.css
+++ b/responsive.css
@@ -162,7 +162,22 @@
         font-weight: 100;
         margin-top: 10px;
     }
-    
+    .art__gallery{
+        display: flex;        
+    }
+    .column_art__gallery{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .column_art__gallery img{
+        width: 90%;
+        margin: 15px;
+        transition: all 0.3s ease 0s;
+    }
+    .column_art__gallery img:hover{
+        width: 95%;
+    }
 }
 
 /* // Medium devices (tablets, 768px and up) */
