--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-
-
 *{
     box-sizing: border-box;
     margin: 0px;
@@ -10,15 +8,10 @@
     text-decoration: none;
 }
 body{    
-    width: 100%;
-    height: auto;
     background-color: #1e1c27;
 }
-header{    
+header{
     color: #fff;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
     background-color: #00000027;
 }
 .profile_pic img{
@@ -36,19 +29,9 @@ h1, h5, h6 {
 h4, p {    
     font-family: 'Montserrat', sans-serif;
 }
-.page{
-    text-align: center;
-    display: flex;    
-    flex-direction: row;
-    color: #fff;
-}
 h1, h2, h3, h4, h5, h6 {
     margin-top: 30px;
     margin-bottom: 10px;
-}
-.second_header .profile_pic img {
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
 }
 button.download_btn {
     height: 74px;
@@ -151,20 +134,6 @@ ul li{
     font-family: 'Poppins', sans-serif;
     line-height: normal;
 }
-.skills_area {
-    display: flex;
-    flex-direction: row;
-}
-.skills_area_left {
-    flex: 1;
-}
-.skills_area_right {
-    flex: 1;
-}
-progress[value] {  
-    width: 180px;
-    height: 40px;
-}
 .second_header{
     display: flex;
     flex-direction: row;
@@ -180,102 +149,140 @@ progress[value] {
 .second_header div {
     flex: 1;
 }
-
-.my__social{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 2rem;
-    text-align: center;
-}
-.my__social i{
-    margin-left: 1em;
-    margin-right: 1em;
-    transition: all 0.3s ease 0s;
-    font-size: 1.8em;  
-    transition: all 0.3s ease 0s;
-}
-.my__social a{
-    font-family: "Poppins", sans-serif;
-    text-decoration: none;
-    color: white;
-    padding: 25px;
-    padding-top: 55px;
-}
-.my__social a:hover{
-    padding: 28px;
-    transition: all 0.4s ease 0s;
-}
-
-/* // Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {     
-    
- }
-
-/* // Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
-    
-}
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
-    .page {        
-        flex-direction: row;
-        text-align: left;
-    }
     body {        
         padding-left: 50px;
         padding-right: 50px;
         padding-top: 65px;
     }
     header{
-        text-align: left;
         display: flex;
         flex-direction: row;
         background-color: #00000027;
     }
-    .left_sidebar {        
-        border-right: 2px solid #fff;
-        border-color: #5CE1E6;
-    }
-    .right_sidebar {        
-        margin-left: 123px;
-    }
-    .second_sidebar_right {        
-        margin-left: 54px;
-    }
-
  }
 
 /* // X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { 
-    
+@media (min-width: 1200px) {     
     body {        
         padding-left: 12%;
         padding-right: 12%;
         padding-top: 65px;
     }
-
-
- }
-
-/* // XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) { 
+    }
+    .icon-row {
+        right: 0;
+    }
     
+  .icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    margin-top: 27px;
+    margin-right: 27px;
+    background-color: #ffffff00;
+      border: 1px solid #5CE1E6;
+      border-radius: 25px;
+      transition: transform 0.3s;
+    }
 
+    .icon-container:hover {
+      transform: scale(1.1);
+    }
 
- }
+    .fa {
+      font-size: 20px;
+      color: #5CE1E6;
+    }
 
+  canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 120%;
+    height: 120%;
+    z-index: -998;
+  }
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -999;
+    opacity: 0.2; 
+    filter: brightness(6);
+    background-size: cover;
+  }
+  .container {
+    position: relative;
+    width: 100%;
+    margin: 4em auto;
+    margin-top: 135px;
+  }
 
+  .github-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: -35px;
+    margin-top: -65px;
+    z-index: 11;
+    height: 300px;
+    border-radius: 15px;
+    transition: all 0.5s;
+    box-shadow: 5px 5px 20px 0px #000000;
+    opacity: 0.9;
+  }
+  .github-image:hover {
+    height: 315px;
+  }
 
-
-
-
-
-
-
-
-
-
-
-
-
+  .text-content {
+    padding: 2em;
+    background-color: #ffffff63;
+    position: relative;
+    z-index: 1;
+  }
+  .btn {
+    display: inline-block;
+    padding: 0.5em 1em;
+    background-color: #5CE1E6;
+    color: #000000;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-top: 1em;
+    transition: all 1s;
+  } 
+  .btn:hover {
+    background-color: #000000;
+    color: aqua;
+  }
+  iframe {        
+    box-shadow: 5px 5px 20px 0px #000000;
+    opacity: 0.8;
+  }
+  .projectIframe {
+    overflow: hidden;
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+    transform-origin: 0 0;
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    margin-top: -35px; 
+    margin-left: -50px;
+    border-radius: 15px;
+    border: none;
+    transition: all 0.5s;
+  }
+  .projectIframe:hover {
+    -webkit-transform: scale(0.55);
+    transform: scale(0.55);
+  }
+  .iframe-container {
+    overflow: hidden;
+  }
