--- a/style.css
+++ b/style.css
@@ -1,192 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-*{
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-    text-decoration: none;
-}
-body{    
-    background-color: #1e1c27;
-}
-header{
-    color: #fff;
-    background-color: #00000027;
-}
-.profile_pic img{
-    width: 33%;
-    overflow: hidden;
-    border-radius: 8%;
-}
-.profile_pic {
-    display: flex;
-    justify-content: center;
-}
-h1, h5, h6 {    
-    font-family: 'Poppins', sans-serif;
-}
-h4, p {    
-    font-family: 'Montserrat', sans-serif;
-}
-h1, h2, h3, h4, h5, h6 {
-    margin-top: 30px;
-    margin-bottom: 10px;
-}
-button.download_btn {
-    height: 74px;
-    width: 287px;
-    border-radius: 18px;
-    background: #5CE1E6;
-    color: black;
-    font-size: 25px;
-    margin-bottom: 41px;
-}
-button.download_btn:hover {
-    cursor: pointer;
-}
-div.download_area {
-    display: flex;
-    justify-content: center;
-}
-body{
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
-.profile_pic{
-    flex: 1;
-    overflow: visible;
-}
-.description{
-    flex: 2;
-}
-.profile_pic img{
-    width: 270px;
-    height: 270px;
-    border-radius: 8%;
-    margin: 5rem;
-}
-.description {
-    margin: 5rem;
+/* Background */
 
-}
-h1{
-    font-size: 63px;
-    font-weight: 900;
-    line-height: 4rem;
-}
-h4{
-    font-size: 22px;
-    color: #5CE1E6;
-    line-height: 65px;
-}
-h5{
-    font-weight: 600;
-    color: #fff;
-    font-size: 20px;
-    line-height: 1.5rem;
-}
-h6{
-    font-weight: 100;
-    color: #fff;
-    font-size: 18px;
-    line-height: 1.3rem;
-    margin-bottom: 2rem;
-}
-p{
-    font-weight: 300;
-    font-size: 18px;
-    color: #fff;
-    margin: 1rem 0;
-}
-
-.page{
-    flex-direction: column;
-    text-align: center;
-    margin-top: 85px;
-    padding-bottom: 50px;
-    overflow-y: visible;
-}
-.left_sidebar {
-    flex: 5;
-}
-.right_sidebar{
-    flex: 6;
-}
-.second_sidebar_left{
-    flex: 6;
-}
-.second_sidebar_right{
-    flex: 5;
-}
-ul{ 
-    margin-left: 1rem;
-    list-style-type: disc;
-    overflow: visible;
-}
-ul li{
-    margin-bottom: 2rem;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    line-height: normal;
-}
-.second_header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: #00000027;
-}
-.second_header h1 {
-    flex: 1;
-    color: white;
-    text-align: end;
-}
-.second_header div {
-    flex: 1;
-}
-/* // Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
-    body {        
-        padding-left: 50px;
-        padding-right: 50px;
-        padding-top: 65px;
+    body{  
+        background-color: #000000;
+        /* background: linear-gradient(to top right, #7f195b,#7f195b, #000000,#7f195b, #000000, #000000, #0084ff,#000000,#000000,#7f195b, #000000,#7f195b, #000000, #000000,#000000,#000000, #0084ff); */
     }
+    .backdrop {
+        background-image: url(backdrop.jpg);
+        animation: wave 2s ease-in-out infinite;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -999;
+        opacity: 0.3; 
+        filter: brightness(2);
+        background-size: cover;
+    }
+    canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 120%;
+        height: 120%;
+        z-index: -998;
+    }
+
+/* The Header Of the document */
     header{
-        display: flex;
-        flex-direction: row;
+        height: 100vh;
+        color: #fff;
         background-color: #00000027;
     }
- }
-
-/* // X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {     
-    body {        
-        padding-left: 12%;
-        padding-right: 12%;
-        padding-top: 65px;
+    .profile_pic img{
+        width: 33%;
+        overflow: hidden;
+        border-radius: 8%;
+        width: 270px;
+        height: 270px;
+        border-radius: 8%;
+        margin: 5rem;
     }
+    .profile_pic {
+        display: flex;
+        justify-content: center;
+        flex: 1;
+        overflow: visible;
     }
-    .icon-row {
-        right: 0;
+    .description{    
+        margin: 5rem;
+        flex: 2;
     }
-    
-  .icon-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    margin-top: 27px;
-    margin-right: 27px;
-    background-color: #ffffff00;
-      border: 1px solid #5CE1E6;
-      border-radius: 25px;
-      transition: transform 0.3s;
+    .icon-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        margin-top: 27px;
+        margin-right: 27px;
+        background-color: #ffffff00;
+        border: 1px solid #5CE1E6;
+        border-radius: 25px;
+        transition: transform 0.3s;
     }
 
     .icon-container:hover {
@@ -197,92 +76,72 @@ ul li{
       font-size: 20px;
       color: #5CE1E6;
     }
+    
+/* Youtube Channel */
 
-  canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 120%;
-    height: 120%;
-    z-index: -998;
-  }
-  .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -999;
-    opacity: 0.2; 
-    filter: brightness(6);
-    background-size: cover;
-  }
-  .container {
-    position: relative;
-    width: 100%;
-    margin: 4em auto;
-    margin-top: 135px;
-  }
 
-  .github-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-left: -35px;
-    margin-top: -65px;
-    z-index: 11;
-    height: 300px;
-    border-radius: 15px;
-    transition: all 0.5s;
-    box-shadow: 5px 5px 20px 0px #000000;
-    opacity: 0.9;
-  }
-  .github-image:hover {
-    height: 315px;
-  }
+/* Github Banner */
+    .github-banner {
+        margin-left: 10%;
+        margin-right: 10%;
+        width: 77%;
+    }
+    .github-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-left: -35px;
+        margin-top: -65px;
+        z-index: 11;
+        height: 400px;
+        border-radius: 15px;
+        transition: all 0.5s;
+        box-shadow: 5px 5px 20px 0px #000000;
+        opacity: 0.9;
+      }
+      .github-image:hover {
+        height: 420px;
+      }
 
-  .text-content {
-    padding: 2em;
-    background-color: #ffffff63;
-    position: relative;
-    z-index: 1;
-  }
-  .btn {
-    display: inline-block;
-    padding: 0.5em 1em;
-    background-color: #5CE1E6;
-    color: #000000;
-    text-decoration: none;
-    border-radius: 4px;
-    margin-top: 1em;
-    transition: all 1s;
-  } 
-  .btn:hover {
-    background-color: #000000;
-    color: aqua;
-  }
-  iframe {        
-    box-shadow: 5px 5px 20px 0px #000000;
-    opacity: 0.8;
-  }
-  .projectIframe {
-    overflow: hidden;
-    -webkit-transform: scale(0.5);
-    transform: scale(0.5);
-    transform-origin: 0 0;
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    margin-top: -35px; 
-    margin-left: -50px;
-    border-radius: 15px;
-    border: none;
-    transition: all 0.5s;
-  }
-  .projectIframe:hover {
-    -webkit-transform: scale(0.55);
-    transform: scale(0.55);
-  }
-  .iframe-container {
-    overflow: hidden;
-  }
+/* Download Section */
+  
+    button.download_btn {
+        height: 74px;
+        width: 287px;
+        border-radius: 18px;
+        background: #5CE1E6;
+        color: black;
+        font-size: 25px;
+        margin-bottom: 41px;
+    }
+    button.download_btn:hover {
+        cursor: pointer;
+    }
+    div.download_area {
+        display: flex;
+        justify-content: center;
+    }
+
+
+/* Responsiveness */
+/* 
+    Extra small devices (phones) - up to 576px
+    Small devices (tablets) - 576px to 768px
+    Medium devices (desktops) - 768px to 992px
+    Large devices (large desktops) - 992px to 1200px
+    Extra-large devices (extra-large desktops) - 1200px and up
+*/
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+    header{
+        display: flex;
+        flex-direction: row;
+        background-color: #00000027;
+    }
+ }
+
+/* // X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {     
+    
+}
