--- a/style.css
+++ b/style.css
@@ -1,12 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-/* Background */
 
-    body{  
-        background-color: #000000;
-        /* background: linear-gradient(to top right, #7f195b,#7f195b, #000000,#7f195b, #000000, #000000, #0084ff,#000000,#000000,#7f195b, #000000,#7f195b, #000000, #000000,#000000,#000000, #0084ff); */
+
+/* Responsiveness */
+/* 
+    Extra small devices (phones) - up to 576px
+    Small devices (tablets) - 576px to 768px
+    Medium devices (desktops) - 768px to 992px
+    Large devices (large desktops) - 992px to 1200px
+    Extra-large devices (extra-large desktops) - 1200px and up
+*/
+
+/* Background */
+body{  
+    background-color: #000000;
+    /* background: linear-gradient(to top right, #7f195b,#7f195b, #000000,#7f195b, #000000, #000000, #0084ff,#000000,#000000,#7f195b, #000000,#7f195b, #000000, #000000,#000000,#000000, #0084ff); */
+}
+
+/* Extra small devices (phones) */
+@media (max-width: 576px) { 
+    /* Background */
+    canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -998;
     }
+    .profile_pic img{
+        width: 33%;
+        overflow: hidden;
+        border-radius: 100%;
+        width: 140px;
+        height: 140px;
+        margin: 5rem;
+    }
+}
+/*  Small devices (tablets) */
+@media (min-width: 576px) { 
+    /* Background */
     .backdrop {
         background-image: url(backdrop.jpg);
         animation: wave 2s ease-in-out infinite;
@@ -24,26 +58,56 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 120%;
-        height: 120%;
+        width: 100%;
+        height: 100%;
         z-index: -998;
     }
-
-/* The Header Of the document */
+    /* The Header Of the document */
     header{
         height: 100vh;
         color: #fff;
         background-color: #00000027;
+        display: flex;
+        flex-direction: row;
     }
     .profile_pic img{
         width: 33%;
         overflow: hidden;
-        border-radius: 8%;
+        border-radius: 100%;
         width: 270px;
         height: 270px;
-        border-radius: 8%;
         margin: 5rem;
     }
+    /* Github Banner */
+    .github-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-left: -35px;
+        margin-top: -65px;
+        z-index: 11;
+        width: 71%;
+        border-radius: 15px;
+        transition: all 0.5s;
+        box-shadow: 5px 5px 20px 0px #000000;
+        opacity: 0.9;
+      }
+      .github-image:hover {
+        width: 75%;
+      }
+    
+ }
+ /* Medium devices (desktops) */
+ @media (min-width: 768px) { 
+     
+  }
+/* Large devices (large desktops) */
+@media (min-width: 992px) { 
+    /* Background */  
+    
+    
+
+    /* The Header Of the document */
     .profile_pic {
         display: flex;
         justify-content: center;
@@ -77,31 +141,15 @@
       color: #5CE1E6;
     }
     
-/* Youtube Channel */
+    /* Youtube Channel */
 
-
-/* Github Banner */
+    /* Github Banner */
     .github-banner {
         margin-left: 10%;
         margin-right: 10%;
         width: 77%;
-    }
-    .github-image {
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin-left: -35px;
-        margin-top: -65px;
-        z-index: 11;
-        height: 400px;
-        border-radius: 15px;
-        transition: all 0.5s;
-        box-shadow: 5px 5px 20px 0px #000000;
-        opacity: 0.9;
-      }
-      .github-image:hover {
-        height: 420px;
-      }
+    }   
+      
 
 /* Download Section */
   
@@ -121,27 +169,9 @@
         display: flex;
         justify-content: center;
     }
-
-
-/* Responsiveness */
-/* 
-    Extra small devices (phones) - up to 576px
-    Small devices (tablets) - 576px to 768px
-    Medium devices (desktops) - 768px to 992px
-    Large devices (large desktops) - 992px to 1200px
-    Extra-large devices (extra-large desktops) - 1200px and up
-*/
-
-/* // Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
-    header{
-        display: flex;
-        flex-direction: row;
-        background-color: #00000027;
-    }
  }
 
-/* // X-Large devices (large desktops, 1200px and up) */
+/* Extra-large devices (extra-large desktops) */
 @media (min-width: 1200px) {     
     
 }
